Thu Aug  2 09:46:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Log_Msg.cpp:
          Fixed gcc4 warnings

Thu Aug  2 09:22:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Log_Msg.cpp:
          Use regular reinterpret_cast, use 0 instead of NULL and
          in case setspecific fails just do a printf, not an ACE_DEBUG
          because that will use ACE_Log_Msg again.

Wed Aug  1 21:39:04 UTC 2007  Dale Wilson  <wilsond@ociweb.com>

        * bin/tao_orb_tests.lst:
          Enable TAO\tests\Bug_2935_Regression

Wed Aug  1 18:55:12 UTC 2007  Martin Corino  <mcorino@remedy.nl>

        * bin/PerlACE/ConfigList.pm:
          Added '-Exclude <mask>' option to be able to finetune the actual
          tests being run without having to add yet another Config option
          and update the test .LST files.

        * ace/config-openvms.h:
        * include/makeinclude/platform_openvms.GNU:
          merged changes for OpenVMS IA64 builds.

Wed Aug  1 18:01:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/fuzz.pl:
          Readded throw check, thanks for Abdul to notice the wrong
          deletion

Wed Aug  1 15:55:38 UTC 2007  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * ace/Service_Config.h:

          Added conditional compilation around template specification
          since ACE_TSS declares cleanup() only in multi-threaded builds.

Wed Aug  1 12:14:17 UTC 2007  Olli Savia  <ops@iki.fi>

        * ace/OS_NS_dirent.h:
          Oops... Once again.

Wed Aug  1 11:58:02 UTC 2007  Olli Savia  <ops@iki.fi>

        * ace/OS_NS_dirent.h:
          Fixed macro logic error once again.

Wed Aug  1 09:50:51 UTC 2007  Olli Savia  <ops@iki.fi>

        * ace/OS_NS_dirent.h:
          Fixed macro logic error.

Wed Aug  1 08:08:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Service_Config.h:
          Removed not needed semi colon
